--- a/components/footer.html
+++ b/components/footer.html
@@ -6,7 +6,7 @@
       <div class="footer-column">
         <div class="company-logo">
           <img
-            src="./assets/images/index_images/logo.png"
+            src="../public/images/logo.png"
             alt="Trường Sinh Logo"
             class="footer-logo-img"
           />
