--- a/components/header.html
+++ b/components/header.html
@@ -3,9 +3,9 @@
   <div class="container">
     <div class="header-content">
       <div class="logo">
-        <a href="./index.html">
+        <a href="../index.html">
           <img
-            src="./assets/images/index_images/logo.png"
+            src="../public/images/logo.png"
             alt="Logo Công ty Trường Sinh"
             class="logo-img"
           />
