--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,11 +2,17 @@
   <div class="navbar-content">
     <div class="navbar-list">
       <a href="../index.html">Trang chủ</a>
-      <a href="#">Giới thiệu</a>
-      <a href="#">Dịch vụ</a>
-      <a href="#">Dự án</a>
-      <a href="#">Tin tức</a>
-      <a href="#">Tuyển dụng</a>
+      <a href="../pages/about.html">Giới thiệu</a>
+      <div class="dropdown">
+        <a href="../pages/services.html" class="dropdown-toggle">Dịch vụ</a>
+        <div class="dropdown-menu">
+          <a href="../pages/service-construction.html" class="dropdown-item">Xây nhà trọn gói</a>
+          <a href="../pages/service-interior.html" class="dropdown-item">Thiết kế nội thất</a>
+        </div>
+      </div>
+      <a href="../pages/project.html">Dự án</a>
+      <a href="../pages/news.html">Tin tức</a>
+      <a href="../pages/recruitment.html">Tuyển dụng</a>
       <a href="../pages/contact.html">Liên hệ</a>
     </div>
   </div>
