--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,13 +1,25 @@
 <nav class="navbar">
   <div class="navbar-content">
     <div class="navbar-list">
-      <a href="../index.html">Trang chủ</a>
+      <a href="../pages/index.html">Trang chủ</a>
       <a href="../pages/about.html">Giới thiệu</a>
+      <a href="../pages/services.html">Dịch vụ</a>
       <div class="dropdown">
-        <a href="../pages/services.html" class="dropdown-toggle">Dịch vụ</a>
+        <a href="../pages/service-construction.html" class="dropdown-toggle">Xây nhà trọn gói <i
+            class="ri-arrow-down-s-line dropdown-arrow"></i></a>
         <div class="dropdown-menu">
-          <a href="../pages/service-construction.html" class="dropdown-item">Xây nhà trọn gói</a>
-          <a href="../pages/service-interior.html" class="dropdown-item">Thiết kế nội thất</a>
+          <a href="../pages/detail-service-construction.html" class="dropdown-item">Xây nhà trọn gói ở Hà Nội</a>
+          <a href="../pages/service-construction.html" class="dropdown-item">Xây nhà trọn gói ở Bắc Ninh</a>
+          <a href="../pages/service-construction.html" class="dropdown-item">Xây nhà trọn gói ở Nam Định</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="../pages/service-interior.html" class="dropdown-toggle">Thiết kế nội thất <i
+            class="ri-arrow-down-s-line dropdown-arrow"></i></a>
+        <div class="dropdown-menu">
+          <a href="../pages/service-interior.html" class="dropdown-item">Thiết kế nội thất nhà ở</a>
+          <a href="../pages/service-interior.html" class="dropdown-item">Thiết kế nội thất chung cư</a>
+          <a href="../pages/service-interior.html" class="dropdown-item">Thiết kế nội thất văn phòng</a>
         </div>
       </div>
       <a href="../pages/project.html">Dự án</a>
