--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -106,31 +106,11 @@ button {
   background: none;
 }
 
-/* Container */
-.container {
-  /* max-width: 1200px; */
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-/* Layout: Đảm bảo footer luôn ở đáy trang */
-html,
-body {
-  height: 100%;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
+/* Main Content */
 .main-content {
   flex: 1 0 auto;
 }
+
 #footer-placeholder {
   flex-shrink: 0;
   width: 100%;
