--- a/components/footer.html
+++ b/components/footer.html
@@ -5,11 +5,7 @@
       <!-- Column 1: Company Information and Social Media -->
       <div class="footer-column">
         <div class="company-logo">
-          <img
-            src="../public/images/logo.png"
-            alt="Trường Sinh Logo"
-            class="footer-logo-img"
-          />
+          <img src="../public/images/logo.png" alt="Trường Sinh Logo" class="footer-logo-img" />
         </div>
 
         <div class="company-description">
@@ -18,34 +14,14 @@
         <div class="social-section">
           <h4>THEO DÕI CHÚNG TÔI</h4>
           <div class="social-icons">
-            <a
-              href="https://www.facebook.com/xaydungtruongsinh?locale=sw_KE"
-              class="social-icon facebook"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="ri-facebook-fill"></i
-            ></a>
-            <a
-              href="mailto:xaydungtruongsinh.vn@gmail.com"
-              class="social-icon email"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="ri-mail-line"></i
-            ></a>
-            <a
-              href="tel:0975258999"
-              class="social-icon phone"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="ri-phone-line"></i
-            ></a>
-            <a
-              href="https://www.youtube.com/@thietkexaydungnhaepkientru6129"
-              class="social-icon youtube"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="ri-youtube-fill"></i
-            ></a>
+            <a href="https://www.facebook.com/xaydungtruongsinh?locale=sw_KE" class="social-icon facebook"
+              target="_blank" rel="noopener noreferrer"><i class="ri-facebook-fill"></i></a>
+            <a href="mailto:xaydungtruongsinh.vn@gmail.com" class="social-icon email" target="_blank"
+              rel="noopener noreferrer"><i class="ri-mail-line"></i></a>
+            <a href="tel:0975258999" class="social-icon phone" target="_blank" rel="noopener noreferrer"><i
+                class="ri-phone-line"></i></a>
+            <a href="https://www.youtube.com/@thietkexaydungnhaepkientru6129" class="social-icon youtube"
+              target="_blank" rel="noopener noreferrer"><i class="ri-youtube-fill"></i></a>
           </div>
         </div>
       </div>
@@ -68,10 +44,8 @@
           </div>
           <div class="contact-item">
             <i class="ri-global-line"></i>
-            <span
-              >http://xaydungtruongsinh.com.vn - xaydungtruongsinh.com -
-              kientructruongsinh.vn</span
-            >
+            <span>http://xaydungtruongsinh.com.vn - xaydungtruongsinh.com -
+              kientructruongsinh.vn</span>
           </div>
         </div>
       </div>
@@ -94,15 +68,9 @@
         <h4>BẢN ĐỒ</h4>
         <div class="map-section">
           <div class="map-container">
-            <iframe
-              src="https://www.google.com/maps?q=Số+41+ngõ+95+Đội+Cấn,+Ba+Đình,+Hà+Nội&output=embed"
-              width="100%"
-              height="200"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <iframe src="https://www.google.com/maps?q=Số+41+ngõ+95+Đội+Cấn,+Ba+Đình,+Hà+Nội&output=embed" width="100%"
+              height="200" style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
